# gmail_reply_assistant

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  check_db.py  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py  security.py
backend/app/api/routes/: __init__.py  auth.py  drafts.py  health.py  preferences.py  replies.py  threads.py
backend/app/db/: __init__.py  base.py  database.py
backend/app/models/: __init__.py  oauth_token.py  preference.py  user.py
backend/app/schemas/: __init__.py  preference.py  user.py
backend/app/services/: __init__.py  ai.py  context.py  gmail.py  mock_data.py
backend/migrations/: env.py
backend/migrations/versions/: 9626be98500b_initial_migration.py
backend/tests/: test_api.py
contracts/: README.md  openapi.yaml
contracts/fixtures/: generate_replies_response.json  thread_context.json
docs/: SETUP.md  WORK_PLAN.md
extension/: .env.example  package-lock.json  package.json  tsconfig.json  wxt.config.ts
extension/components/: ConnectGmail.tsx  ContextPreview.tsx  ErrorState.tsx  LoadingState.tsx  OptionsPage.tsx  ReplyControls.tsx  SidePanelApp.tsx  SuggestionList.tsx
extension/entrypoints/: background.ts  gmail.content.ts
extension/entrypoints/options/: index.html  main.tsx
extension/tests/: ConnectGmail.test.tsx  ContextPreview.test.tsx  LoadingErrorState.test.tsx  OptionsPage.test.tsx  ReplyControls.test.tsx  SidePanelApp.test.tsx  SuggestionList.test.tsx  api-client.test.ts  gmail.content.test.ts
tests/e2e/: README.md
(+6 files in other folders)
