[project]
name = "gmail-reply-assistant-backend"
version = "0.1.0"
description = "Backend API for the Gmail Reply Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
